Fixing column wrapping issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@
 }
   
 @media screen and (max-width: 600px) {
-    .column {
+    .column1, .column2 {
         width: 100%;
     }
 }
